# beihang-login-rs

./: .env.json.example  .gitignore  Cargo.toml  Changes.md  Cross.toml  LICENSE  account.json.example  readme.md
.github/workflows/: manual-compile.yml  rust-cross-compile.yml
src/: main.rs
