[package]
name = "beihang-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bytes = "1"
chrono = "0.4.31"
digest = "0.10.7"
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"
reqwest = { version = "0.11.22", features = ["blocking", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
