[package]
name = "beihang-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true

[dependencies]
base64 = "0.21.5"
bytes = "1"
chrono = "0.4.31"
cookie_store = "0.21"
digest = "0.10.7"
getopts = "0.2.21"
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"
native-tls = { optional = true, version = "*" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
ureq = { version = "2.8.0", default-features = false, features = [
    "json",
    "charset",
    "cookies",
    "native-tls",
] }
url = "2.5.0"

[features]
default = ["native-tls"]
native-tls = ["dep:native-tls", "ureq/native-tls"]
rustls = ["ureq/tls"]
